@@ -387,8 +387,11 @@
   (no-focus)
   (let* ((current-root (find-root (current-child)))
          (parent (find-parent-frame (root-original current-root))))
-    (setf (frame-child parent) (funcall fun (frame-child parent))
-          (current-child) (frame-selected-child parent)))
+    (setf (frame-child parent) (funcall fun (frame-child parent)))
+    (let ((new-root (find-root (frame-selected-child parent))))
+      (setf (current-child) (aif (root-current-child new-root)
+                                 it
+                                 (frame-selected-child parent)))))
   (show-all-children t)
   (leave-second-mode))
 
